@@ -1,5 +1,10 @@
 2005-10-11  Vincent Noel  <vnoel@cox.net>
 
+	* log_repaint.c (logview_draw_log_lines): Make sure things still
+	work when a line is collapsed.
+
+2005-10-11  Vincent Noel  <vnoel@cox.net>
+
 	* log_repaint.c (logview_draw_log_lines): Try to avoid flicker as
 	much as possible when switching logs.
 
